# cex

./: CMakeLists.txt  README.md
docs/: README.md  args.md
include/: args.h  color.h  colors.h  log.h  vector.h
src/: args.cpp  color.cpp  colors.cpp  log.cpp
test/: colors.cpp
tests/: args.cpp  color.cpp
